<resources>
    <string name="app_name">Testing Kotlin</string>
    <string name="hello_world">Hello World!</string>

    <string name="your_passwords">YOUR PASSWORDS</string>
    <string name="your_tasks">YOUR TASKS</string>

    <string name="sing_up"><u>Sign up</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In!</string>
    <string name="full_name">Full name</string>
    <string name="back_to_log_in">Back to Log In</string>
    <string name="title_activity_tasks_passwords">TasksPasswordsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="task_name">Task name</string>
    <string name="task_description">Task description here</string>
    <string name="completed">Completed   </string>
</resources>
